# Julia

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  RUNBOOK.md  pyproject.toml  vision.md
deploy/systemd/: README.md  install.sh  julia.service
scripts/: _run_live_once.py  _smoke_full_pipeline.py  _smoke_github_editor.py  systemd_smoke.py
src/julia/: __init__.py  autonomy.py  cli.py  config.py  models.py  orchestrator.py  quota.py  state.py  watchdog.py
src/julia/behavior/: __init__.py  _safety.py  editor.py
src/julia/gateway/: __init__.py  base.py  console.py  telegram.py
src/julia/gh/: __init__.py  client.py
src/julia/jules/: __init__.py  client.py  dossier.py
src/julia/llm/: __init__.py  provider.py
tests/: test_autonomy.py  test_behavior.py  test_end_to_end.py  test_github_behavior.py  test_jules_outputs_to_pr.py  test_live_shape.py  test_quota.py  test_state.py
