[project]
name = "julia-orchestrator"
version = "0.1.0"
description = "Always-on AI developer orchestrator on top of Jules and GitHub (vision.md)."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23,<1",
  "pytest-timeout>=2.3",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
julia = "julia.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
